fix: switch to background-image for reliable portrait face cropping

--- a/css/style.css
+++ b/css/style.css
@@ -324,10 +324,7 @@ a {
 }
 
 .portrait-card img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
+  display: none;
 }
 
 .portrait-card--purple {
@@ -336,12 +333,10 @@ a {
   width: 206px;
   height: 404px;
   border-radius: 44px 44px 88px 88px;
-  background: var(--purple);
-}
-.portrait-card--purple img {
-  object-position: center top;
-  transform: scale(2.4);
-  transform-origin: center top;
+  background-color: var(--purple);
+  background-image: url('../assets/images/portrait-man-orange.png');
+  background-size: auto 260%;
+  background-position: center top;
 }
 
 .portrait-card--cyan {
@@ -350,13 +345,11 @@ a {
   width: 196px;
   height: 178px;
   border-radius: 42px;
-  background: var(--cyan);
+  background-color: var(--cyan);
+  background-image: url('../assets/images/portrait-woman-pink.png');
+  background-size: auto 420%;
+  background-position: center 5%;
   z-index: 4;
-}
-.portrait-card--cyan img {
-  object-position: center top;
-  transform: scale(3.2);
-  transform-origin: center 22%;
 }
 
 .portrait-card--yellow {
@@ -365,10 +358,12 @@ a {
   width: 180px;
   height: 428px;
   border-radius: 92px;
-  background: var(--yellow);
+  background-color: var(--yellow);
+  background-image: url('../assets/images/portrait-woman-print.png');
+  background-size: auto 160%;
+  background-position: center top;
   z-index: 1;
 }
-.portrait-card--yellow img { object-position: center 10%; }
 
 .portrait-card--magenta {
   left: 28px;
@@ -376,12 +371,10 @@ a {
   width: 206px;
   height: 204px;
   border-radius: 56px;
-  background: var(--magenta);
-}
-.portrait-card--magenta img {
-  object-position: center top;
-  transform: scale(2.8);
-  transform-origin: center 28%;
+  background-color: var(--magenta);
+  background-image: url('../assets/images/portrait-woman-red.png');
+  background-size: auto 300%;
+  background-position: center 10%;
 }
 
 .portrait-card--orange {
@@ -390,10 +383,12 @@ a {
   width: 192px;
   height: 432px;
   border-radius: 56px 56px 88px 88px;
-  background: var(--orange);
+  background-color: var(--orange);
+  background-image: url('../assets/images/portrait-man-brown.png');
+  background-size: auto 200%;
+  background-position: center top;
   z-index: 3;
 }
-.portrait-card--orange img { object-position: center 22%; }
 
 .orbital {
   position: absolute;
